getting close on a refactor with require js

--- a/requirejs.html
+++ b/requirejs.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Require JS Test</title>
+    <title>Lost Pets of Adelaide</title>
 
+    <link rel="stylesheet" media="all" href="css/styles.css" />
     <script src="scripts/libs/requirejs/require.js" data-main="scripts/app.js"></script>
 </head>
 <body>
-
+    <div id="map">
+    </div>
 </body>
 </html>
