--- a/index.html
+++ b/index.html
@@ -2,160 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maps Demo</title>
+    <title>Lost Pets of Adelaide</title>
+
     <link rel="stylesheet" media="all" href="css/styles.css" />
-
-
-    <!-- Replace everything with require-js -->
-
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="mapfunctions.js"></script>
-    <script src="utility.js"></script>
-    <script>
-        var dataFeed;
-        //@todo - remove this !
-        var token = '1668433980109240|dNtaRlW_hfoSKocTWtS3UELlJa8';
-        //var regex = /(?:lost\s+|found|sighting\s+)(?:dog|cat|bird+?(?:s\b|\b))(.*)(?:\#.+)/ig;
-        var regex = /(\w+\b)(?:\s)(bird|cat|dog(?=s\b|\b))(?:\s|s+)(.*)(?:\#\w+\b\s)([0-9\/]+\b)/ig;
-        var promise = $.Deferred();
-        var map;
-        var allItems = [];
-
-        function getFeed(){
-            // Facebook Code
-            FB.api(
-                    '/adelaidedogs/feed?access_token='+token+'&fields=message,created_time,id,picture,full_picture',
-                    'GET',
-                    {},
-                    function(response) {
-                        // Insert your code here
-                        dataFeed = response;
-                        promise.resolve(dataFeed);
-                    }
-            );
-        }
-
-        function getImages(object_id) {
-
-        }
-
-        /**
-         * Parse a facebook string
-         * @todo clean this method up a lot
-         * very messy not very clean
-         */
-        function parseMessage(string){
-            var message = string.split('\n');
-            // This sucks for regex in js.
-            var action = getMatches(message[0], regex, 1);
-            var type = getMatches(message[0], regex, 2);
-            var location = getMatches(message[0], regex, 3);
-            var date = getMatches(message[0], regex, 4);
-
-            if(location && type) {
-                var parsed = {
-                    'action' : action,
-                    'type' : type,
-                    'location': location.trim(),
-                    'date': date
-                };
-                return parsed;
-            } else {
-                console.error('Cannot regex the following message:');
-                console.error(message);
-            }
-            return false;
-        }
-
-        promise.done(function(fbobj){
-            fbobj.data.forEach(function(object){
-                // only do something if there is a message
-                if(object.message) {
-                    // get an item
-                   var item = parseMessage(object.message);
-                   if (item && typeof item === 'object') {
-                       allItems.push(item);
-                       geocodeAddress(geocoder, item.location,
-                       function(address) {
-                           createMarker(map, address, createMessage(item, object.message, object.picture));
-                       });
-                   }
-               }
-            });
-        });
-    </script>
+    <script src="scripts/libs/requirejs/require.js" data-main="scripts/app.js"></script>
 </head>
 <body>
-    <script>
-        window.fbAsyncInit = function() {
-            FB.init({
-                appId      : '1668433980109240',
-                xfbml      : true,
-                version    : 'v2.5'
-            });
-
-            getFeed();
-        };
-
-        (function(d, s, id){
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) {return;}
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <div id="map"></div>
-    <script src="mapfunctions.js"></script>
-    <script>
-
-        // Global Variables
-        var geocoder;
-
-        // use addresses for the marker
-        // @todo stage 2 - parse data from facebook
-
-        // bootstrap for google maps
-        function initMap() {
-            geocoder = new google.maps.Geocoder();
-            map = new google.maps.Map(document.getElementById('map'), {
-                //center: {lat: -34.397, lng: 150.644},
-                zoom: 12
-            });
-            var infoWindow = new google.maps.InfoWindow({map: map});
-
-            // Try HTML5 geolocation.
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    var pos = {
-                        lat: position.coords.latitude,
-                        lng: position.coords.longitude
-                    };
-
-                    infoWindow.setPosition(pos);
-                    infoWindow.setContent('Location found.');
-                    map.setCenter(pos);
-                }, function() {
-                    handleLocationError(true, infoWindow, map.getCenter());
-                });
-            } else {
-                // Browser doesn't support Geolocation
-                handleLocationError(false, infoWindow, map.getCenter());
-            }
-
-        }
-
-        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-            infoWindow.setPosition(pos);
-            infoWindow.setContent(browserHasGeolocation ?
-                    'Error: The Geolocation service failed.' :
-                    'Error: Your browser doesn\'t support geolocation.');
-        }
-
-
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPmxNOhyPW4DR2tdfxMq-bpreHLr_bnxA&signed_in=true&callback=initMap"
-            async defer>
-    </script>
+    <div id="map">
+    </div>
 </body>
 </html>
